--- a/snippets/order-history-User.liquid
+++ b/snippets/order-history-User.liquid
@@ -1,5 +1,5 @@
 <div id="order-list" style="display:none;">
-  <div class="w3-row">
+  <div class="w3-row printModeExclude">
       <div class="w3-col m2" style="position:relative;">
         <small class="nbsp-hide"><label for="">Date Filter</label></small>
         <input id="start_date" value="{{first_order}}" readonly class="datepicker" type="text" name="start_date" placeholder="Start Date" >
