--- a/templates/customers/account.liquid
+++ b/templates/customers/account.liquid
@@ -32,18 +32,32 @@
   {% endif %}
 
 <div class="section-header section-header--large">
-  <h1 class="section-header__title">{{ 'customer.account.title' | t }}</h1>
+  <h1 class="section-header__title printModeExclude">{{ 'customer.account.title' | t }}</h1>
 </div>
 
 <div class="grid">
 
-  <div class="grid__item {% if customer.tags contains Role_ASM %}three-quarters{% else %}two-thirds{% endif %} medium-down--one-whole">
+  <div class="grid__item {% if customer.tags contains Role_ASM %}three-quarters{% else %}two-thirds{% endif %} medium-down--one-whole print-one-whole">
     <h2 style="display:inline-block;" class="h3"><b>{{ 'customer.orders.title' | t }}{% if customer.tags contains Role_ASM or customer.tags contains Role_Printer %} <!--(Individual View)-->{% endif %}</b></h2>
     {% comment %}
     {% if customer.tags contains Role_ASM or customer.tags contains Role_Printer %}
     <a style="display:inline-block;" class="w3-right" href="/account?view=summary-list"><button type="button" class="btn btn--primary">Group View</button></a>
     {% endif %}
     {% endcomment %}
+    
+    <div class="w3-right printModeExclude text-right per_page_wrapper" style="display:inline-block; width:{% if customer.tags contains Role_ASM %}238px{% else %}212px{% endif %};">
+      <label for="per_page" style="display:inline-block;" class="">Per Page: &nbsp;</label>
+      <select id="per_page" class="per_page" style="max-width:60px; display:inline-block;" onchange="updateState({page: '1',per_page: this.value});updatePerPage(this.value);">
+        <option selected value='10'>10</option>
+        <option {% if customer_per_page == '20' %}selected{% endif %} value='20'>20</option>
+        <option {% if customer_per_page == '30' %}selected{% endif %} value='30'>30</option>
+        <option {% if customer_per_page == '40' %}selected{% endif %} value='40'>40</option>
+        <option {% if customer_per_page == '50' %}selected{% endif %} value='50'>50</option>
+      </select>
+    </div>
+    
+    <button id="printOrder" styles="margin: 0 20px;" type="button" class="btn btn--secondary btn--primary1 printModeExclude w3-right" onclick="windowPrint();" title="Print this order"><i class="fa fa-print"></i> Print Order History</button>
+    
 	<br><br>
     
     {% comment %}
@@ -105,7 +119,7 @@
 
   </div>
 
-  <div class="grid__item {% if customer.tags contains Role_ASM %}asm-col one-quarter{% else %}one-third{% endif %} medium-down--one-whole">
+  <div class="grid__item {% if customer.tags contains Role_ASM %}asm-col one-quarter{% else %}one-third{% endif %} medium-down--one-whole printModeExclude">
     <h2 class="h3"><b>{{ 'customer.account.details' | t }}</b></h2>
 
     <span class="h5" title="{{ customer.email }}">{{ customer.name }}</span>
@@ -190,6 +204,10 @@
               console.log("{{shop.domain}}");
   var orderExport = [];
   var printerExport = [];
+              
+  $(window).load(function(){
+    setInterval(function(){ $('.per_page_wrapper').css('width', $('#td_select').width()+'px');}, 2000);
+  });
               
   $(document).ready(function(){
   	$('#start_date').val('');
@@ -390,11 +408,55 @@
     });
   }
             
-</script>  
+function windowPrint(){
+    $.when( 
+      $('{% unless customer.tags contains Role_Printer %}header .grid--full:not(:nth-of-type(1)),{% endunless %} .header-bar, .printModeExclude:visible, footer').hide().toggleClass('visible'),
+      $('.site-header__logo img').css('margin','0 0'),
+
+      $('#address-hidden, #id01').css({ 'position':'relative', 'bottom':'80px'}),
+      $('.printModeInclude').toggleClass('hide'),
+        $('.print-one-whole').toggleClass('one-whole {% if customer.tags contains Role_ASM %}three-quarters{% else %}two-thirds{% endif %}'),
+      $('.th-span').toggleClass('th-span th-spaned')
+
+    ).done(function(){ 
+    	setTimeout(window.print(), 10);
+    });
+    
+    {% comment %}{% endcomment %}
+    $('{% unless customer.tags contains Role_Printer %}header .grid--full:not(:nth-of-type(1)),{% endunless %} .header-bar, .printModeExclude.visible, footer').show().toggleClass('visible');
+    $('.site-header__logo img').css('margin','0 auto');
+    $('.site-header__logo').toggleClass('w3-col s3');
+    
+    $('.printModeInclude').toggleClass('hide');
+      $('.print-one-whole').toggleClass('one-whole {% if customer.tags contains Role_ASM %}three-quarters{% else %}two-thirds{% endif %}');
+    $('.th-span').toggleClass('th-span th-spaned');
+
+    
+  }
+</script> 
 
 <style>
-  a.cancelled{
-  	text-decoration: line-through !important;
-    color: gray !important;
+  
+@media print{
+   /* applied to our table */
+  .w3-table1, tr, td{ position: relative !important; }
+   .w3-table tr td {
+     -webkit-region-break-inside: avoid !important;
+     page-break-inside:avoid !important;
+     page-break-after: always;
   }
+}
+
+@media  print {
+    thead, tbody, tfooter { 
+        display: table-row-group;
+    }
+}
+
+a.cancelled{
+  text-decoration: line-through !important;
+  color: gray !important;
+}
+  
+  
 </style>
